@@ -51,7 +51,7 @@ However, catalog search for both HFS+ and APFS is available in Darwin's low-leve
 
 ## TODO
 
-* The searchfs API supports searching the catalog for files based on creation, modification or access date, finder flags, deprecated old-school file and creator types, and so on. Add that.
+* The searchfs API supports searching the catalog for files based on size, owner, group, creation, modification or access date, finder flags, deprecated old-school file and creator types, and so on. Add that.
 
 ## Version History
 
