@@ -7,11 +7,12 @@
 
 <b>SYNOPSIS</b>
 
-     <b>searchfs</b> [<b>-dfespixnoh</b>] [<b>-v</b> <u>mount</u><b>_<u></b>point</u>] <u>search</u><b>_<u></b>term</u>
+     <b>searchfs</b> [<b>-ldfespixnmoh</b>] [<b>-v</b> <u>mount</u><b>_<u></b>point/device</u><b>_<u></b>namelist</u><b>_<u></b>volumes</u>]
+              <u>search</u><b>_<u></b>term</u>
 
 <b>DESCRIPTION</b>
 
-     <b>searchfs</b> searches for files by name on HFS+ and APFS volumes. Searching
+     <b>searchfs</b> searches for files by name on APFS and HFS+ volumes. Searching
      takes place at the driver level using the file system catalog via the
      low-level searchfs() kernel call. This means the volume's entire direc-
      tory tree can be scanned much faster than with a standard recursive
@@ -60,8 +61,8 @@
               tories contains one item: /System.
 
      <b>-n,</b> <b>--negate-params</b>
-              Show all file system objects that do *not* match the search cri-
-              teria.
+              Show all file system objects that do *not* match the search
+              term.
 
      <b>-m,</b> <b>--limit</b> <u>number</u>
               Terminate when the specified number of matching items has been
@@ -84,9 +85,9 @@
            searchfs -v /Volumes/SomeHD -e file.txt
 
      The regular expression characters ^ and $ can be used to match only the
-     beginning or only the end of a string, thusly:
+     beginning or only the end of a string, respectively.
 
-     Find all filenames ending with suffix '.txt':
+     For example, find all filenames ending with the suffix '.txt':
 
            searchfs '.txt$'
 
@@ -102,6 +103,6 @@
 
      Sveinbjorn Thordarson &lt;sveinbjorn@sveinbjorn.org&gt;
 
-Darwin                            Jun 7, 2019                           Darwin
+Darwin                           May 16, 2019                           Darwin
 </font></pre>
 </body></html>
