@@ -2,6 +2,7 @@
 TODO:
     * Create brew formula
     * Search by date created, modified, file type, creator type
+    * Search all volumes by passing "*" or "all" to -v flag
 
 0.3
     * New -l flag makes searchfs list all mounted volumes that support catalog search
